--- a/index.html
+++ b/index.html
@@ -36,29 +36,218 @@
       <div class="home-content">
         <h3>Hello, its me</h3>
         <h1>Caroline <span>(Raquel)</span> Mathini</h1>
-        <h3>And I'm a <span>Frontend Developer</span></h3>
+        <h3>And I'm a  <!--<span class="multiple-text"></span>--><span>Frontend Developer</span></h3> 
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum illo
           at ex aliquid accusamus, eligendi nobis quis, quia suscipit quod,
           veniam doloribus saepe tempore velit autem repellat reiciendis quos
-          maiores.
+          maiores. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Voluptatem dolor unde ut, obcaecati fuga sapiente totam dolorem
+          exercitationem quo velit earum in nihil harum, voluptas aperiam aut
+          eaque laudantium mollitia.
         </p>
         <div class="social-media">
-            <a href="#"><i class='bx bxl-linkedin' ></i></a>
-            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
-            <a href="#"><i class='bx bxl-facebook' ></i></a>
+          <a href="https://www.linkedin.com/in/mathinicarole/"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/mathinicarole"><i class="bx bxl-github"></i> </a>
+          <a href="https://www.instagram.com/_ma.thiniii/"><i class="bx bxl-instagram-alt"></i></a>
+          <a href="https://twitter.com/mathinicarole"><i class="bx bxl-twitter"></i></a>
         </div>
         <a href="#" class="btn">Download CV</a>
-
       </div>
       <div class="home-img">
-        <img src="/images/home.png" alt="">
+        <img src="/images/home.png" alt="" />
       </div>
     </section>
 
     <!-- about section design -->
+    <section class="about" id="about">
+      <div class=" about-img">
+        <img src="/images/aboutt.png" alt="" />
+      </div>
+
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Frontend Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+          adipisci hic alias, omnis doloremque quod vero tempora iusto quasi
+          molestias. Quis iusto nihil ullam tempora ea mollitia perspiciatis
+          obcaecati recusandae. Lorem ipsum dolor sit, amet consectetur
+          adipisicing elit. Voluptatem dolor unde ut, obcaecati fuga sapiente
+          totam dolorem exercitationem quo velit earum in nihil harum, voluptas
+          aperiam aut eaque laudantium mollitia. Lorem ipsum dolor sit, amet
+          consectetur adipisicing elit. Voluptatem dolor unde ut, obcaecati fuga
+          sapiente totam dolorem exercitationem quo velit earum in nihil harum,
+          voluptas aperiam aut eaque laudantium mollitia.
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </section>
+
+    <!-- services section design -->
+    <section class="services" id="services">
+      <h2 class="heading">My<span> Services</span></h2>
+
+      <div class="services-container">
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Web Development</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
+            dolor unde ut, obcaecati fuga sapiente totam dolorem exercitationem
+            quo velit earum in nihil harum, voluptas aperiam aut eaque
+            laudantium mollitia.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bxs-paint"></i>
+          <h3>Graphic design</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
+            dolor unde ut, obcaecati fuga sapiente totam dolorem exercitationem
+            quo velit earum in nihil harum, voluptas aperiam aut eaque
+            laudantium mollitia.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bx-bar-chart-alt"></i>
+          <h3>Digital marketing</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
+            dolor unde ut, obcaecati fuga sapiente totam dolorem exercitationem
+            quo velit earum in nihil harum, voluptas aperiam aut eaque
+            laudantium mollitia.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- porfolio section design -->
+
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">Latest <span>Projects</span></h2>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="/images/Screenshot (75).png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Real estate</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Assumenda iusto blanditiis recusandae ipsa dignissimos deserunt
+            </p>
+            <a href="#" class=""><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="/images/Screenshot (81).png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Pedicare</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Assumenda iusto blanditiis recusandae ipsa dignissimos deserunt
+            </p>
+            <a href="#" class=""><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="/images/jambocare.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Jambocare</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Assumenda iusto blanditiis recusandae ipsa dignissimos deserunt
+            </p>
+            <a href="#" class=""><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="/images/Screenshot (74).png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Admin</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Assumenda iusto blanditiis recusandae ipsa dignissimos deserunt
+            </p>
+            <a href="#" class=""><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="/images/Screenshot (78).png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Restaurant</h4>
+
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Assumenda iusto blanditiis recusandae ipsa dignissimos deserunt
+            </p>
+            <a href="#" class=""><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="/images/Screenshot (82).png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Application</h4>
+
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Assumenda iusto blanditiis recusandae ipsa dignissimos deserunt
+            </p>
+            <a href="#" class=""><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact section design -->
+    <section class="contact" id="contact">
+      <h2 class="heading">Contact <span> Me!</span></h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Full name" />
+          <input type="email" placeholder="Email address" />
+        </div>
+        <div class="input-box">
+          <input type="number" placeholder="Mobile Number" />
+          <input type="text" placeholder="Email Subject" />
+        </div>
+        <textarea
+          name=""
+          id=""
+          color="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <input type="submit" value="Send Message" class="btn" />
+      </form>
+    </section>
+
+    <!-- footer design -->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by Raquelcarole / All Rights Reserved.</p>
+      </div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+      </div>
+    </footer>
+
+
+
+    <!--  scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!-- custom js -->
     <script src="/JS/script.js"></script>
+    <!-- typedjs -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   </body>
 </html>
