--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     />
     <!-- custom css -->
     <link rel="stylesheet" href="/css/style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+  <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
     <!-- header design -->
@@ -26,7 +31,6 @@
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="#awards">Awards</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -208,6 +212,7 @@
       </div>
     </section>
 
+  
     <!-- contact section design -->
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span> Me!</span></h2>
@@ -249,5 +254,7 @@
     <script src="/JS/script.js"></script>
     <!-- typedjs -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+    
   </body>
 </html>
