--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!-- custom css -->
     <link rel="stylesheet" href="/css/style.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
-  <script src="https://unpkg.com/scrollreveal"></script>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
     <!-- header design -->
@@ -40,21 +40,35 @@
       <div class="home-content">
         <h3>Hello, its me</h3>
         <h1>Caroline <span>(Raquel)</span> Mathini</h1>
-        <h3>And I'm a  <!--<span class="multiple-text"></span>--><span>Frontend Developer</span></h3> 
+        <h3>
+          And I'm a
+          <!--<span class="multiple-text"></span>--><span
+            >Frontend Developer</span
+          >
+        </h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum illo
-          at ex aliquid accusamus, eligendi nobis quis, quia suscipit quod,
-          veniam doloribus saepe tempore velit autem repellat reiciendis quos
-          maiores. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Voluptatem dolor unde ut, obcaecati fuga sapiente totam dolorem
-          exercitationem quo velit earum in nihil harum, voluptas aperiam aut
-          eaque laudantium mollitia.
+          I am currently a student at the Mount Kenya University.I am pursuing
+          Business and Information Technology.I am very passionate about
+          learning new technologies and dive deep into the current world issues
+          and solutions. I'm an enthusiastic and hard working IT person. Working
+          for different projects helped to adopt to the changes quickly and made
+          me a mature team worker. I am able to work well both in a team work
+          environment as well as using own motive.In addition,I am able to work
+          well under pressure and adhere to strict deadlines.
         </p>
         <div class="social-media">
-          <a href="https://www.linkedin.com/in/mathinicarole/"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/mathinicarole"><i class="bx bxl-github"></i> </a>
-          <a href="https://www.instagram.com/_ma.thiniii/"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="https://twitter.com/mathinicarole"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/mathinicarole/"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
+          <a href="https://github.com/mathinicarole"
+            ><i class="bx bxl-github"></i>
+          </a>
+          <a href="https://www.instagram.com/_ma.thiniii/"
+            ><i class="bx bxl-instagram-alt"></i
+          ></a>
+          <a href="https://twitter.com/mathinicarole"
+            ><i class="bx bxl-twitter"></i
+          ></a>
         </div>
         <a href="#" class="btn">Download CV</a>
       </div>
@@ -65,7 +79,7 @@
 
     <!-- about section design -->
     <section class="about" id="about">
-      <div class=" about-img">
+      <div class="about-img">
         <img src="/images/aboutt.png" alt="" />
       </div>
 
@@ -73,16 +87,14 @@
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Frontend Developer</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-          adipisci hic alias, omnis doloremque quod vero tempora iusto quasi
-          molestias. Quis iusto nihil ullam tempora ea mollitia perspiciatis
-          obcaecati recusandae. Lorem ipsum dolor sit, amet consectetur
-          adipisicing elit. Voluptatem dolor unde ut, obcaecati fuga sapiente
-          totam dolorem exercitationem quo velit earum in nihil harum, voluptas
-          aperiam aut eaque laudantium mollitia. Lorem ipsum dolor sit, amet
-          consectetur adipisicing elit. Voluptatem dolor unde ut, obcaecati fuga
-          sapiente totam dolorem exercitationem quo velit earum in nihil harum,
-          voluptas aperiam aut eaque laudantium mollitia.
+          I am currently growing my skills, knowledge and my contribution to the
+          society. Having to be a woman-in-tech is my biggest motivation.This is
+          because I am passionate about open source, communities and women
+          leadership empowerment and impact. I am 2023 Microsoft Game Of
+          Learners season 4 Winner , a top crowdsource contributer,
+          Entertainment Coordinator,Women Techmakers contributer and volunteer.
+          When am not coding, I like travelling, adventures, dancing,
+          networking, new experiences and event planning.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
@@ -97,10 +109,9 @@
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
-            dolor unde ut, obcaecati fuga sapiente totam dolorem exercitationem
-            quo velit earum in nihil harum, voluptas aperiam aut eaque
-            laudantium mollitia.
+            I am currently working on my Front-end career path.
+            Skills: React, Typescript , Javascript, Material UI, mySQL,
+            Responsive design.
           </p>
           <a href="#" class="btn">Read More</a>
         </div>
@@ -212,7 +223,6 @@
       </div>
     </section>
 
-  
     <!-- contact section design -->
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span> Me!</span></h2>
@@ -246,15 +256,11 @@
       </div>
     </footer>
 
-
-
     <!--  scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- custom js -->
     <script src="/JS/script.js"></script>
     <!-- typedjs -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-
-    
   </body>
 </html>
